--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -15,7 +15,6 @@ confirm_os_window_close 0
 
 #: Color scheme {{{
 
-
 background_opacity .60
 background_image none
 background_image_layout tiled
@@ -49,3 +48,5 @@ color15               #ffffff
 selection_foreground #2b2b2b
 
 kitty_mod ctrl+alt+shift
+map cmd+comma noop
+map cmd+n noop
